# agilex_scout

./: CMakeLists.txt  package.xml
launch/: agilex_scout_node.launch
src/: agilex_scout_node.cpp  agilex_scout_protocol.h
